--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -27,7 +30,6 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/favicons/site.webmanifest" />
     <link
       rel="mask-icon"
       href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg"
@@ -42,7 +44,7 @@
     <link
       rel="manifest"
       crossorigin="use-credentials"
-      href="%PUBLIC_URL%/manifest.json"
+      href="%PUBLIC_URL%/favicons/manifest.json"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
