updated: seo data

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app to showcase a Frontend Mentor Challenge."
+      content="We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you."
     />
+
+    <meta name="twitter:title" content="Sunnyside Web Agency" />
+    <meta
+      name="twitter:description"
+      content="We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image"
+      content="https://www.dropbox.com/s/giu1eh8e63f85zy/sunnyside-ogimage.jpg?raw=1"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
